--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   riverpod_annotation: ^2.3.5
   go_router: ^14.2.0
 
+  code_text_field: ^1.1.0
+  highlight: ^0.7.0
+  code_builder: ^4.10.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
