--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   highlight: ^0.7.0
   code_builder: ^4.10.0
 
+  built_collection: ^5.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
