--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,15 @@ dependencies:
   code_builder: ^4.10.0
 
   built_collection: ^5.1.1
+  intl:
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.5.2
+  intl_translation:
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
